# awesome_app

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/awesomeapp/: config.py  database.py  main.py  models.py  routes.py  system_routes.py
tests/: test_main.py
