[project]
requires-python = ">=3.10"
name = "awesomeapp"
version = "0.1.0"
description = "A Python project created using Poetry."
authors = [
    {name = "Alpha Liner",email = "alpha.liner@outlook.com"}
]
readme = "README.md"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "numpy (>=1.26.4,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
]

[tool.poetry]
# This section is used by Poetry to manage the project package.
# It specifies the source directory for the package.
packages = [{include = "awesomeapp", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1" # means any version compatible with 8.4.1, but less than 9.0.0
pytest-cov = "^4.1.0"
httpx = "^0.28.1"
ruff = "^0.12.12"
mypy = "^1.17.0"

[tool.poetry.scripts]
awesomeapp = "awesomeapp.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
